# aiecommerce

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/apps/books/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/books/migrations/: 0001_initial.py
backend/apps/cart/: models.py  serializers.py  urls.py  views.py
backend/apps/cart/migrations/: 0001_initial.py
backend/apps/common/: exceptions.py  middleware.py  permissions.py
backend/apps/orders/: models.py  serializers.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_alter_order_status.py
backend/apps/payments/: services.py  urls.py  views.py
backend/apps/support/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/support/agent/: haney.py
backend/apps/support/migrations/: 0001_initial.py  0002_supportsession_summary_and_more.py
backend/apps/users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py  views_debug.py
backend/apps/users/auth/: clerk.py
backend/apps/users/management/: __init__.py
backend/apps/users/management/commands/: backfillusers.py  createtestuser.py
backend/apps/users/migrations/: 0001_initial.py  0002_userprofile_is_active.py
backend/apps/vapi_support/: apps.py  serializers.py  services.py  urls.py  views.py
backend/apps/wishlist/: models.py  serializers.py  urls.py  views.py
backend/apps/wishlist/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
(+28 files in other folders)
