[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.2",
    "cryptography>=48.0.0",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "livekit>=1.1.9",
    "livekit-agents>=1.3.11",
    "livekit-api>=1.1.0",
    "livekit-plugins-openai>=1.3.11",
    "nest-asyncio>=1.6.0",
    "openai>=2.38.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "razorpay>=2.0.1",
    "requests>=2.34.2",
    "stripe>=15.2.0",
]
